Fix: Header z-index

--- a/src/styles/partials/_top.scss
+++ b/src/styles/partials/_top.scss
@@ -1,4 +1,6 @@
 .top {
+  position: relative;
+  z-index: 20;
   margin: 0;
   display: grid;
   padding: $spacing-md 0;
